1582937916 | 91 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/config/vrcompositor_actions_fi_FI.json,  M resources/config/vrcompositor_actions_nl_NL.json,  M resources/config/vrcompositor_actions_zh_CN.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/bindingui_brazilian.json,  M resources/webinterface/dashboard/localization/bindingui_bulgarian.json,  M resources/webinterface/dashboard/localization/bindingui_czech.json,  M resources/webinterface/dashboard/localization/bindingui_danish.json,  M resources/webinterface/dashboard/localization/bindingui_dutch.json,  M resources/webinterface/dashboard/localization/bindingui_fin
https://steamdb.info/patchnotes/4728704/

--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json
@@ -15,11 +15,11 @@
 	"pairingdevice_knuckles_controllername": "Valve Index-controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive-controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_logitechvrinkpilotedition_shortname": "VR Ink Pilot - Logitech-editie",
+	"pairingdevice_logitechvrinkpilotedition_shortname": "Logitech VR Ink Pilot Edition",
 	"pairingdevice_a_knuckles_controllername": "een Valve Index-controller",
 	"pairingdevice_a_vivewand_shortname": "een HTC Vive-controller",
 	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_logitechvrinkpilotedition_shortname": "een Logitech-editie van VR Ink Pilot",
+	"pairingdevice_a_logitechvrinkpilotedition_shortname": "een Logitech VR Ink Pilot Edition",
 	"pair_controller_title": "%1$s koppelen",
 	"pairinginstructions_generic_desc": "Zet je controller in de koppelmodus",
 	"pairsuccess_title": "Gelukt!",
