--- a/resources/webinterface/dashboard/localization/bindingui_dutch.json
+++ b/resources/webinterface/dashboard/localization/bindingui_dutch.json
@@ -51,7 +51,7 @@
   "SourceInputMode_OverlapPercent": "Overlappingspercentage:",
   "SourceInputMode_DeadzonePercent": "Percentage dode zone:",
   "SourceInputMode_Maxzone": "Max zone Percentage:",
-  "SourceInputMode_Exponent": "Curve Exponent:",
+  "SourceInputMode_Exponent": "Krommingsexponent:",
   "SourceInputMode_StickyDpad": "Vierpuntsdruktoetsactie aanhouden bij activering",
   "SourceInputMode_LongPressDelay": "Vertraging lang indrukken:",
   "SourceInputMode_DoublePressDelay": "Vertraging dubbel indrukken:",
@@ -75,11 +75,11 @@
   "SourceInputMode_Single_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
   "SourceInputMode_Double_tooltip": "True after a double click has been executed (down / up and down / up again)",
   "SourceInputMode_Long_tooltip": "True when a click has been engaged for the configured amount of seconds.",
-  "SourceInputMode_North_tooltip": "The North or top section of the control.",
-  "SourceInputMode_South_tooltip": "The South or bottom section of the control.",
-  "SourceInputMode_East_tooltip": "The East or right section of the control.",
-  "SourceInputMode_West_tooltip": "The West or left section of the control.",
-  "SourceInputMode_Center_tooltip": "The center of the control.",
+  "SourceInputMode_North_tooltip": "Het noorden of de bovenste sectie van de besturing.",
+  "SourceInputMode_South_tooltip": "Het zuiden of de onderste sectie van de besturing.",
+  "SourceInputMode_East_tooltip": "Het oosten of de rechter sectie van de besturing.",
+  "SourceInputMode_West_tooltip": "Het westen of de linker sectie van de besturing.",
+  "SourceInputMode_Center_tooltip": "Het midden van de besturing.",
   "SourceInputMode_Position_tooltip": "The position you are touching on a touchpad or the position you've pushed a joystick to.",
   "SourceInputMode_Pull_tooltip": "A value (0-1) representing what percentage you have depressed a trigger.",
   "SourceInputMode_Force_tooltip": "The amount of force (0-1) applied to the control.",
@@ -259,10 +259,10 @@
   "TrackerRole_RightFoot": "Rechtervoet",
   "TrackerRole_LeftShoulder": "Linkerschouder",
   "TrackerRole_RightShoulder": "Rechterschouder",
-  "TrackerRole_LeftElbow": "Left Elbow",
-  "TrackerRole_RightElbow": "Right Elbow",
-  "TrackerRole_LeftKnee": "Left Knee",
-  "TrackerRole_RightKnee": "Right Knee",
+  "TrackerRole_LeftElbow": "Linkerelleboog",
+  "TrackerRole_RightElbow": "Rechterelleboog",
+  "TrackerRole_LeftKnee": "Linkerknie",
+  "TrackerRole_RightKnee": "Rechterknie",
   "TrackerRole_Waist": "Middel",
   "TrackerRole_Chest": "Borst",
   "TrackerRole_Camera": "Camera",
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "%1$s bewerken",
   "BindingUI_ViewPageTitle": "%1$s bekijken",
   "BindingUI_PageSubTitle": "%3$s voor %1$s in %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s voor %1$s (%4$s) in %2$s",
   "BindingUI_BindingType_autosave": "Lokale wijzigingen",
   "BindingUI_BindingType_personal": "Persoonlijke configuratie",
   "BindingUI_BindingType_developer": "Ontwikkelaarsconfiguratie",
   "BindingUI_BindingType_developer_legacy": "Klassieke standaardwaarden",
   "BindingUI_BindingType_local_file": "Lokale configuratie",
   "BindingUI_BindingType_public": "Openbare configuratie",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Huidige configuratie",
   "BindingUI_List_DeveloperSection": "Officiële configuraties",
   "BindingUI_List_LegacySection": "Standaard configuraties",
@@ -384,32 +384,32 @@
   "BindingUI_InputDebugger": "Invoerdebugger",
   "InputDebugger_SelectApplication": "Select a running application",
   "InputDebugger_WaitingForApp": "Waiting for update from application",
-  "InputDebugger_ActiveActionSets": "Active Action Sets",
+  "InputDebugger_ActiveActionSets": "Actieve actiesets",
   "InputDebugger_NoActiveActionSets": "Application has no active action sets",
-  "InputDebugger_None": "None",
-  "InputDebugger_ActionSetName": "Action Set",
-  "InputDebugger_SecondaryActionSetName": "Secondary Action Set",
-  "InputDebugger_Device": "Restrict to Device",
-  "InputDebugger_Priority": "Priority",
-  "InputDebugger_ActionManifestFailed": "Unable to load action manifest",
-  "InputDebugger_ActionManifestLoading": "Loading action manifest",
+  "InputDebugger_None": "Geen",
+  "InputDebugger_ActionSetName": "Actieset",
+  "InputDebugger_SecondaryActionSetName": "Secundaire actieset",
+  "InputDebugger_Device": "Tot apparaat beperken",
+  "InputDebugger_Priority": "Prioriteit",
+  "InputDebugger_ActionManifestFailed": "Kan actiemanifest niet laden",
+  "InputDebugger_ActionManifestLoading": "Actiemanifest wordt geladen",
   "InputDebugger_NoActions": "Application has no actions",
-  "InputDebugger_FilterDetails": "Filter details",
-  "InputDebugger_FilterState_Title": "Filter state for %1$s",
-  "InputDebugger_Source": "Source:",
-  "InputDebugger_Binding": "Binding:",
-  "InputDebugger_Active": "Active:",
-  "InputDebugger_ActiveOrigin": "Origin:",
-  "InputDebugger_UpdateTime": "Last Update:",
-  "InputDebugger_Value": "Value:",
-  "InputDebugger_ActionUnbound": "Action is unbound",
+  "InputDebugger_FilterDetails": "Filterdetails",
+  "InputDebugger_FilterState_Title": "Filterstatus van %1$s",
+  "InputDebugger_Source": "Bron:",
+  "InputDebugger_Binding": "Configuratie:",
+  "InputDebugger_Active": "Actief:",
+  "InputDebugger_ActiveOrigin": "Oorsprong:",
+  "InputDebugger_UpdateTime": "Laatste update:",
+  "InputDebugger_Value": "Waarde:",
+  "InputDebugger_ActionUnbound": "Actie is niet gebonden",
   "InputDebugger_Parameters": "Parameters:",
-  "InputDebugger_Inputs": "Inputs:",
-  "InputDebugger_Outputs": "Outputs:",
+  "InputDebugger_Inputs": "Invoer:",
+  "InputDebugger_Outputs": "Uitvoer:",
   "InputDebugger_FilterType": "Type:",
-  "InputDebugger_PriorityValue": "(Priority %1$s)",
-  "InputDebugger_Suppressed": "Suppressed",
-  "InputDebugger_Priority_Overlay": "Global + %1$s",
+  "InputDebugger_PriorityValue": "(Prioriteit %1$s)",
+  "InputDebugger_Suppressed": "Onderdrukt",
+  "InputDebugger_Priority_Overlay": "Globaal + %1$s",
   "BindingUI_WindowTitle_ControllerSettings": "Controllerinstellingen",
   "BindingUI_WindowTitle_ControllerBinding": "Controllerconfiguratie",
   "BindingUI_WindowTitle_DisplaySettings": "Weergave-instellingen",
@@ -463,7 +463,7 @@
   "Settings_ControllerSettings_Utilities": "Hulpprogramma's controller",
   "Settings_General_Cancel": "Annuleren",
   "Settings_General_Confirm": "Bevestigen",
-  "Settings_General_Calibrate": "Calibrate",
+  "Settings_General_Calibrate": "Kalibreren",
   "Settings_General_NotEnoughSamples": "Druk nog minstens %1$s keer naar boven op de analoge stick om het kalibreren af te ronden.",
   "Settings_General_InviteMoreSamples": "Berekende hoek: %1$s graden. Blijf naar boven toe drukken om die waarde verder af te stellen of druk op 'Bevestigen' om deze kalibratie te aanvaarden.",
   "Settings_General_LeftThumbstickAngle": "Hoek analoge stick (links): %1$s°",
