--- a/resources/webinterface/dashboard/localization/bindingui_finnish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_finnish.json
@@ -51,7 +51,7 @@
   "SourceInputMode_OverlapPercent": "Limitysprosentti:",
   "SourceInputMode_DeadzonePercent": "Kuolleen alueen prosenttiosuus:",
   "SourceInputMode_Maxzone": "Max zone Percentage:",
-  "SourceInputMode_Exponent": "Curve Exponent:",
+  "SourceInputMode_Exponent": "Kaarevuuseksponentti:",
   "SourceInputMode_StickyDpad": "Ristiohjaimen pysyvä toiminto aktivoinnin jälkeen",
   "SourceInputMode_LongPressDelay": "Pitkän painalluksen viive:",
   "SourceInputMode_DoublePressDelay": "Kaksoispainalluksen viive:",
@@ -299,7 +299,7 @@
   "BindingUI_BindingType_developer_legacy": "Yhteensopivuuden oletusasetukset",
   "BindingUI_BindingType_local_file": "Paikalliset määritykset",
   "BindingUI_BindingType_public": "Yleismääritykset",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Nykymääritykset",
   "BindingUI_List_DeveloperSection": "Viralliset määritykset",
   "BindingUI_List_LegacySection": "Oletusmääritykset",
