--- a/resources/webinterface/dashboard/localization/bindingui_german.json
+++ b/resources/webinterface/dashboard/localization/bindingui_german.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "%1$s bearbeiten",
   "BindingUI_ViewPageTitle": "%1$s anzeigen",
   "BindingUI_PageSubTitle": "%3$s für %1$s in %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s für %1$s (%4$s) in %2$s",
   "BindingUI_BindingType_autosave": "Lokale Änderungen",
   "BindingUI_BindingType_personal": "Persönliche Zuordnung",
   "BindingUI_BindingType_developer": "Entwickler Zuordnung",
   "BindingUI_BindingType_developer_legacy": "Klassische Standards",
   "BindingUI_BindingType_local_file": "Lokale Zuordnung",
   "BindingUI_BindingType_public": "Öffentliche Zuordnung",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Aktuelle Zuordnung",
   "BindingUI_List_DeveloperSection": "Offizielle Zuordnungen",
   "BindingUI_List_LegacySection": "Standardzuordnungen",
@@ -394,7 +394,7 @@
   "InputDebugger_ActionManifestFailed": "Aktionsmanifest konnte nicht geladen werden.",
   "InputDebugger_ActionManifestLoading": "Aktionsmanifest wird geladen.",
   "InputDebugger_NoActions": "Anwendung verfügt über keine Aktionssets.",
-  "InputDebugger_FilterDetails": "Details filtern",
+  "InputDebugger_FilterDetails": "Filterdetails",
   "InputDebugger_FilterState_Title": "Filterstatus von %1$s",
   "InputDebugger_Source": "Quelle:",
   "InputDebugger_Binding": "Zuordnung:",
