--- a/resources/webinterface/dashboard/localization/bindingui_greek.json
+++ b/resources/webinterface/dashboard/localization/bindingui_greek.json
@@ -299,7 +299,7 @@
   "BindingUI_BindingType_developer_legacy": "Παραδοσιακές προεπιλογές",
   "BindingUI_BindingType_local_file": "Τοπική διάταξη",
   "BindingUI_BindingType_public": "Δημόσια διάταξη",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Τρέχουσα διάταξη",
   "BindingUI_List_DeveloperSection": "Επίσημη διάταξη",
   "BindingUI_List_LegacySection": "Προεπιλεγμένες διατάξεις",
