--- a/resources/webinterface/dashboard/localization/bindingui_japanese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_japanese.json
@@ -18,7 +18,7 @@
   "SourceInputMode_Force_Sensor": "力センサー",
   "SourceInputMode_trigger": "トリガー",
   "SourceInputMode_Click": "クリック",
-  "SourceInputMode_TriggerClick": "Click",
+  "SourceInputMode_TriggerClick": "クリック",
   "SourceInputMode_Touch": "タッチ",
   "SourceInputMode_Held": "長押し",
   "SourceInputMode_Single": "シングル",
@@ -30,7 +30,7 @@
   "SourceInputMode_West": "西",
   "SourceInputMode_Center": "中央",
   "SourceInputMode_Scroll": "スクロール",
-  "SourceInputMode_Trackpad_Scroll": "Scroll",
+  "SourceInputMode_Trackpad_Scroll": "スクロール",
   "SourceInputMode_Position": "位置",
   "SourceInputMode_Pull": "プル",
   "SourceInputMode_Force": "力量",
@@ -56,7 +56,7 @@
   "SourceInputMode_LongPressDelay": "長押し遅延：",
   "SourceInputMode_DoublePressDelay": "ダブルプレス遅延：",
   "SourceInputMode_DeadZone": "デッドゾーン",
-  "SourceInputMode_button_tooltip": "Use this control like a Button. Handles touches, clicks, holds, double clicks, and long presses.",
+  "SourceInputMode_button_tooltip": "このコントロールをボタンのように使います。タッチ、クリック、ホールド、ダブルクリック、長押しに対応しています。",
   "SourceInputMode_trackpad_tooltip": "Use this control like a Trackpad. XY positioning, touches, and presses.",
   "SourceInputMode_joystick_tooltip": "Use this control like a Joystick. XY positioning, touches, and presses.",
   "SourceInputMode_toggle_button_tooltip": "Use this control like a toggle. One press for on, one press for off.",
@@ -299,7 +299,7 @@
   "BindingUI_BindingType_developer_legacy": "従来のデフォルト",
   "BindingUI_BindingType_local_file": "ローカルバインド",
   "BindingUI_BindingType_public": "公開バインド",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "現在のバインド",
   "BindingUI_List_DeveloperSection": "公式バインド",
   "BindingUI_List_LegacySection": "デフォルトバインド",
