--- a/resources/webinterface/dashboard/localization/bindingui_polish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_polish.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "Edytujesz: %1$s",
   "BindingUI_ViewPageTitle": "Podgląd: %1$s",
   "BindingUI_PageSubTitle": "%3$s dla „%1$s” w %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s dla „%1$s” (%4$s) w %2$s",
   "BindingUI_BindingType_autosave": "Lokalne zmiany",
   "BindingUI_BindingType_personal": "Konfiguracja osobista",
   "BindingUI_BindingType_developer": "Konfiguracja producenta",
   "BindingUI_BindingType_developer_legacy": "Domyślna konfiguracja historyczna",
   "BindingUI_BindingType_local_file": "Konfiguracja lokalna",
   "BindingUI_BindingType_public": "Konfiguracja publiczna",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Obecna konfiguracja",
   "BindingUI_List_DeveloperSection": "Oficjalne konfiguracje",
   "BindingUI_List_LegacySection": "Domyślne konfiguracje",
