--- a/resources/webinterface/dashboard/localization/bindingui_romanian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_romanian.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "Se editează %1$s",
   "BindingUI_ViewPageTitle": "Se vizualizează %1$s",
   "BindingUI_PageSubTitle": "%3$s pentru %1$s în %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s pentru %1$s (%4$s) în %2$s",
   "BindingUI_BindingType_autosave": "Modificări locale",
   "BindingUI_BindingType_personal": "Asociere personală",
   "BindingUI_BindingType_developer": "Asociere de la dezvoltator",
   "BindingUI_BindingType_developer_legacy": "Originale",
   "BindingUI_BindingType_local_file": "Asociere locală",
   "BindingUI_BindingType_public": "Asociere publică",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Asocierea din prezent",
   "BindingUI_List_DeveloperSection": "Asocieri oficiale",
   "BindingUI_List_LegacySection": "Asocieri implicite",
