--- a/resources/webinterface/dashboard/localization/bindingui_russian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_russian.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "%1$s: изменение",
   "BindingUI_ViewPageTitle": "%1$s: просмотр",
   "BindingUI_PageSubTitle": "%3$s для %1$s в %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s для %1$s (%4$s) в %2$s",
   "BindingUI_BindingType_autosave": "Локальные изменения",
   "BindingUI_BindingType_personal": "Своя раскладка",
   "BindingUI_BindingType_developer": "Раскладка разработчика",
   "BindingUI_BindingType_developer_legacy": "Раскладка по умолчанию — режим совместимости",
   "BindingUI_BindingType_local_file": "Локальная раскладка",
   "BindingUI_BindingType_public": "Общедоступная раскладка",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Текущая раскладка",
   "BindingUI_List_DeveloperSection": "Официальная раскладка",
   "BindingUI_List_LegacySection": "Раскладки по умолчанию",
