--- a/resources/webinterface/dashboard/localization/bindingui_spanish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_spanish.json
@@ -56,20 +56,20 @@
   "SourceInputMode_LongPressDelay": "Retardo de pulsación larga:",
   "SourceInputMode_DoublePressDelay": "Retardo de pulsación doble:",
   "SourceInputMode_DeadZone": "Zona muerta",
-  "SourceInputMode_button_tooltip": "Use this control like a Button. Handles touches, clicks, holds, double clicks, and long presses.",
-  "SourceInputMode_trackpad_tooltip": "Use this control like a Trackpad. XY positioning, touches, and presses.",
-  "SourceInputMode_joystick_tooltip": "Use this control like a Joystick. XY positioning, touches, and presses.",
-  "SourceInputMode_toggle_button_tooltip": "Use this control like a toggle. One press for on, one press for off.",
-  "SourceInputMode_dpad_click_tooltip": "Use this control like a DPAD being clicked. Clicks in North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_touch_tooltip": "Use this control like a DPAD being touched. North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_tooltip": "Use this control like a DPAD being clicked or touched. Split up in North, East, South, and West quadrants.",
-  "SourceInputMode_scroll_tooltip": "Use this control as a scroll wheel. Reports horizontal and vertical scrolling amounts.",
+  "SourceInputMode_button_tooltip": "Usa este control como si fuera un botón. Permite tocar, hacer clic, mantener presionado, hacer doble clic y el pulsado largo.",
+  "SourceInputMode_trackpad_tooltip": "Usa este control para lo que harías con un Trackpad: posicionamiento XY, tocar y pulsar.",
+  "SourceInputMode_joystick_tooltip": "Usa este control para lo que harías con un joystick: posicionamiento XY, tocar y pulsar.",
+  "SourceInputMode_toggle_button_tooltip": "Usa este control para alternar. Pulsa una vez para activar, otra vez para desactivar.",
+  "SourceInputMode_dpad_click_tooltip": "Usa este control para los clic de un DPAD. Haz clic en los cuadrantes norte, sur, este y oeste.",
+  "SourceInputMode_dpad_touch_tooltip": "Usa este control para los toques de un DPAD. Toca en los cuadrantes norte, sur, este y oeste.",
+  "SourceInputMode_dpad_tooltip": "Usa este control para los clic o toques de un DPAD. Está dividido en los cuadrantes norte, sur, este y oeste.",
+  "SourceInputMode_scroll_tooltip": "Usa este control como una rueda de desplazamiento. Transfiere la cantidad de desplazamiento vertical y horizontal.",
   "SourceInputMode_Force_Sensor_tooltip": "Gives analog actions a 0-1 value indicating how much force the user is applying to the control.",
   "SourceInputMode_trigger_tooltip": "Use this control as if it was a trigger. Touch (or any press), Click if there is a physical click at the end of the trigger, and the amount (0-1) the trigger is depressed.",
   "SourceInputMode_Grab_tooltip": "Combines capacitive sensors and force sensors to report a more reliable grab.",
   "SourceInputMode_Scalar_Constant_tooltip": "Allows you to use a digital (on/off) control to set an analog (0-1) value.",
   "SourceInputMode_Click_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
-  "SourceInputMode_TriggerClick_tooltip": "The physical click at the end of a trigger.",
+  "SourceInputMode_TriggerClick_tooltip": "El clic físico que se nota al pulsar un gatillo hasta el final.",
   "SourceInputMode_Touch_tooltip": "True when the control is being touched.",
   "SourceInputMode_Held_tooltip": "True while the button is down before the amount of time specified in Long Press Delay has passed.",
   "SourceInputMode_Single_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "Modificando %1$s",
   "BindingUI_ViewPageTitle": "Viendo %1$s",
   "BindingUI_PageSubTitle": "%3$s para %1$s en %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s para %1$s (%4$s) en %2$s",
   "BindingUI_BindingType_autosave": "Cambios locales",
   "BindingUI_BindingType_personal": "Asignación personal",
   "BindingUI_BindingType_developer": "Asignación del desarrollador",
   "BindingUI_BindingType_developer_legacy": "Ajustes originales",
   "BindingUI_BindingType_local_file": "Asignación local",
   "BindingUI_BindingType_public": "Asignación pública",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Asignación actual",
   "BindingUI_List_DeveloperSection": "Asignaciones oficiales",
   "BindingUI_List_LegacySection": "Asignaciones predeterminadas",
@@ -394,7 +394,7 @@
   "InputDebugger_ActionManifestFailed": "Unable to load action manifest",
   "InputDebugger_ActionManifestLoading": "Loading action manifest",
   "InputDebugger_NoActions": "La aplicación no tiene acciones",
-  "InputDebugger_FilterDetails": "Filtrar detalles",
+  "InputDebugger_FilterDetails": "Detalles del filtro",
   "InputDebugger_FilterState_Title": "Filter state for %1$s",
   "InputDebugger_Source": "Origen:",
   "InputDebugger_Binding": "Asignación:",
