--- a/resources/webinterface/dashboard/localization/bindingui_tchinese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_tchinese.json
@@ -60,23 +60,23 @@
   "SourceInputMode_trackpad_tooltip": "像用觸控板一樣使用此控制項。XY 定位、觸碰和按壓。",
   "SourceInputMode_joystick_tooltip": "像用搖桿一樣使用此控制項。XY 定位、觸碰和按壓。",
   "SourceInputMode_toggle_button_tooltip": "像用切換一樣使用此控制項。按一下為開，再按一下為關。",
-  "SourceInputMode_dpad_click_tooltip": "Use this control like a DPAD being clicked. Clicks in North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_touch_tooltip": "Use this control like a DPAD being touched. North, East, South, and West quadrants.",
-  "SourceInputMode_dpad_tooltip": "Use this control like a DPAD being clicked or touched. Split up in North, East, South, and West quadrants.",
-  "SourceInputMode_scroll_tooltip": "Use this control as a scroll wheel. Reports horizontal and vertical scrolling amounts.",
-  "SourceInputMode_Force_Sensor_tooltip": "Gives analog actions a 0-1 value indicating how much force the user is applying to the control.",
+  "SourceInputMode_dpad_click_tooltip": "像用十字鍵一樣使用此控制項。點擊東、南、西、北四個象限。",
+  "SourceInputMode_dpad_touch_tooltip": "像觸碰十字鍵一樣使用此控制項。有東、南、西、北四個象限。",
+  "SourceInputMode_dpad_tooltip": "像點擊或觸碰十字鍵一樣使用此控制項。分為東、南、西、北四個象限。",
+  "SourceInputMode_scroll_tooltip": "像用滾輪一樣使用使用此控制項。回報水平和垂直捲動數量。",
+  "SourceInputMode_Force_Sensor_tooltip": "給予類比動作 0-1 的值，顯示玩家施於此控制項上的力度。",
   "SourceInputMode_trigger_tooltip": "Use this control as if it was a trigger. Touch (or any press), Click if there is a physical click at the end of the trigger, and the amount (0-1) the trigger is depressed.",
-  "SourceInputMode_Grab_tooltip": "Combines capacitive sensors and force sensors to report a more reliable grab.",
-  "SourceInputMode_Scalar_Constant_tooltip": "Allows you to use a digital (on/off) control to set an analog (0-1) value.",
-  "SourceInputMode_Click_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
-  "SourceInputMode_TriggerClick_tooltip": "The physical click at the end of a trigger.",
-  "SourceInputMode_Touch_tooltip": "True when the control is being touched.",
-  "SourceInputMode_Held_tooltip": "True while the button is down before the amount of time specified in Long Press Delay has passed.",
-  "SourceInputMode_Single_tooltip": "For controls that are physical buttons this engages on press down. Otherwise engages when a configurable threshold has been passed.",
-  "SourceInputMode_Double_tooltip": "True after a double click has been executed (down / up and down / up again)",
-  "SourceInputMode_Long_tooltip": "True when a click has been engaged for the configured amount of seconds.",
-  "SourceInputMode_North_tooltip": "The North or top section of the control.",
-  "SourceInputMode_South_tooltip": "The South or bottom section of the control.",
+  "SourceInputMode_Grab_tooltip": "結合電容感應器和力度感應器來回報更可靠的抓取。",
+  "SourceInputMode_Scalar_Constant_tooltip": "能讓您使用數位（開 / 關）控制項來設定類比（0-1）值。",
+  "SourceInputMode_Click_tooltip": "若有實體按鍵的控制項，在按下時會觸發。否則會在按壓可設定的臨界值時觸發。",
+  "SourceInputMode_TriggerClick_tooltip": "板機鍵末端的物理點擊。",
+  "SourceInputMode_Touch_tooltip": "控制項被觸碰時為 true。",
+  "SourceInputMode_Held_tooltip": "在「長壓延遲」指定的時間結束前按下按鍵時為 true。",
+  "SourceInputMode_Single_tooltip": "若有實體按鍵的控制項，在按下時會觸發。否則會在按壓可設定的臨界值時觸發。",
+  "SourceInputMode_Double_tooltip": "執行雙擊（下 / 上然後再次下 / 上）後為 true。",
+  "SourceInputMode_Long_tooltip": "觸發點擊經過了設定的秒數後為 true。",
+  "SourceInputMode_North_tooltip": "控制項的北區或頂端。",
+  "SourceInputMode_South_tooltip": "控制項的南區或底端。",
   "SourceInputMode_East_tooltip": "The East or right section of the control.",
   "SourceInputMode_West_tooltip": "The West or left section of the control.",
   "SourceInputMode_Center_tooltip": "The center of the control.",
@@ -299,7 +299,7 @@
   "BindingUI_BindingType_developer_legacy": "舊版配置",
   "BindingUI_BindingType_local_file": "本機配置",
   "BindingUI_BindingType_public": "公開配置",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "目前配置",
   "BindingUI_List_DeveloperSection": "官方配置",
   "BindingUI_List_LegacySection": "預設配置",
