--- a/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "Đang sửa %1$s",
   "BindingUI_ViewPageTitle": "Đang xem %1$s",
   "BindingUI_PageSubTitle": "Dùng %3$s cho %1$s trong %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "Dùng %3$s cho %1$s (%4$s) trong %2$s",
   "BindingUI_BindingType_autosave": "bản cục bộ qua chỉnh sửa",
   "BindingUI_BindingType_personal": "cách gán phím cá nhân",
   "BindingUI_BindingType_developer": "cách gán phím của nhà phát triển",
   "BindingUI_BindingType_developer_legacy": "cách gán phím truyền thống",
   "BindingUI_BindingType_local_file": "cách gán lưu tại máy",
   "BindingUI_BindingType_public": "cách gán công cộng",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Cách gán hiện tại",
   "BindingUI_List_DeveloperSection": "Cách gán chính thức",
   "BindingUI_List_LegacySection": "Cách gán mặc định",
