--- a/resources/webinterface/dashboard/localization/dashboard_czech.json
+++ b/resources/webinterface/dashboard/localization/dashboard_czech.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Zrušit umlčení zrcad. zvuku",
   "HeadsetVolume": "Hlasitost headsetu",
   "AudioMirrorVolume": "Hlasitost zrcadleného zvuku",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Umlčet mikrofon",
+  "UnmuteMicrophone": "Zrušit umlčení mikrofonu",
   "SteamVR_Home": "Virtuální domov",
   "Exit_SteamVR_Home": "Odejít z virtuálního domova",
   "Exit_Game": "Ukončit hru",
@@ -46,8 +46,8 @@
   "Size": "Velikost",
   "Mute": "Umlčet",
   "Unmute": "Zrušit umlčení",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Umlčet headset",
+  "Unmute_Headset": "Zrušit umlčení headsetu",
   "WelcomeHeader": "Nemáte žádné hry?",
   "WelcomeMessage": "Začněte plnit svoji VR knihovnu, která Vám zůstane dostupná i po přechodu na jiný hardware.",
   "WelcomeBrowseStore": "Procházet obchod",
