--- a/resources/webinterface/dashboard/localization/dashboard_danish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_danish.json
@@ -17,7 +17,7 @@
   "UnmuteAudioMirror": "Unmute Audio Mirror",
   "HeadsetVolume": "Headset Volume",
   "AudioMirrorVolume": "Audio Mirror Volume",
-  "MuteMicrophone": "Mute Microphone",
+  "MuteMicrophone": "Dæmp mikrofon",
   "UnmuteMicrophone": "Unmute Microphone",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "Afslut SteamVR Home",
@@ -46,7 +46,7 @@
   "Size": "Størrelse",
   "Mute": "Dæmp",
   "Unmute": "Fjern dæmpning",
-  "Mute_Headset": "Mute Headset",
+  "Mute_Headset": "Dæmp headset",
   "Unmute_Headset": "Unmute Headset",
   "WelcomeHeader": "Ingen spil?",
   "WelcomeMessage": "Det har aldrig været nemmere at bygge et VR-bibliotek, som kan følge med dine hardwareændringer.",
