--- a/resources/webinterface/dashboard/localization/dashboard_dutch.json
+++ b/resources/webinterface/dashboard/localization/dashboard_dutch.json
@@ -1,56 +1,56 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "Onbekend",
+  "Now_Starting": "Volgende",
+  "Now_Starting_HomeApp": "Terug naar",
+  "Now_Playing": "Wordt gespeeld",
+  "Now_Playing_HomeApp": "Startpagina",
+  "Now_Quitting": "Wordt afgesloten",
+  "Now_Waiting": "Wachten...",
+  "BackToApp": "Terug naar app",
+  "Toggle_Room_View": "Kamerweergave wisselen",
+  "GoHome": "Naar startpagina",
+  "QuitApp": "App afsluiten",
+  "DashboardPower_Header": "Systeem",
+  "BindingCallout_Header": "Besturing tonen",
   "MutedLabel": "Gedempt",
   "MuteAudioMirror": "Audiospiegeling dempen",
   "UnmuteAudioMirror": "Dempen van audiospiegeling opheffen",
   "HeadsetVolume": "Volume headset",
   "AudioMirrorVolume": "Volume van audiospiegeling",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Microfoon dempen",
+  "UnmuteMicrophone": "Dempen van microfoon opheffen",
   "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
+  "Exit_SteamVR_Home": "SteamVR Home afsluiten",
+  "Exit_Game": "Spel afsluiten",
   "Menu": "Menu",
-  "Desktops": "Desktops",
+  "Desktops": "Bureaubladen",
   "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
+  "X_More_Overlays": "Nog %1$s overlays",
+  "Store": "Winkel",
+  "BrowseAllGames": "Alle spellen doorbladeren",
+  "BrowseAll": "Alles doorbladeren",
+  "StoreSection_TopSingleplayer": "Beste singleplayerspellen",
+  "StoreSection_TopMultiplayer": "Beste multiplayerspellen",
+  "StoreSection_TopFree": "Beste gratis spellen",
+  "Library": "Bibliotheek",
+  "RecentlyPlayed": "Onlangs gespeeld",
+  "Return_To_Game": "Terug naar spel",
+  "Return_To_Home": "Terug naar startpagina",
+  "Controller_Bindings": "Controllerconfiguratie",
+  "App_Video_Settings": "Video-instellingen",
+  "Desktop": "Bureaublad",
+  "Desktop_X": "Bureaublad %1$s",
+  "ShowKeyboardLabel": "Toetsenbord",
+  "ShowKeyboardTooltip": "Toetsenbord tonen",
   "HideKeyboardTooltip": "Toetsenbord verbergen",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games",
-  "Play": "Play"
+  "Size": "Grootte",
+  "Mute": "Dempen",
+  "Unmute": "Niet meer dempen",
+  "Mute_Headset": "Headset dempen",
+  "Unmute_Headset": "Dempen van headset opheffen",
+  "WelcomeHeader": "Geen spellen?",
+  "WelcomeMessage": "Het is nog nooit zo makkelijk geweest om een VR-bibliotheek op te bouwen die met je meegaat terwijl je van hardwareopstelling verandert.",
+  "WelcomeBrowseStore": "Winkel doorbladeren",
+  "WelcomeInstall": "Spellen installeren",
+  "Play": "Spelen"
 }
