--- a/resources/webinterface/dashboard/localization/dashboard_german.json
+++ b/resources/webinterface/dashboard/localization/dashboard_german.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Stummschaltung der Audiospiegelung aufheben",
   "HeadsetVolume": "Lautstärke des VR-Headsets",
   "AudioMirrorVolume": "Lautstärke der Audiospiegelung",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Mikrofon stummschalten",
+  "UnmuteMicrophone": "Stummschaltung des Mikrofons aufheben",
   "SteamVR_Home": "SteamVR-Startort",
   "Exit_SteamVR_Home": "SteamVR-Startort schließen",
   "Exit_Game": "Spiel beenden",
@@ -46,8 +46,8 @@
   "Size": "Größe",
   "Mute": "Stumm",
   "Unmute": "Stummschaltung aufheben",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "VR-Headset stummschalten",
+  "Unmute_Headset": "Stummschaltung des VR-Headsets aufheben",
   "WelcomeHeader": "Keine Spiele?",
   "WelcomeMessage": "Es war noch nie einfacher, eine VR-Bibliothek aufzubauen, die Sie durch jede Hardwareänderung begleitet.",
   "WelcomeBrowseStore": "Shop durchstöbern",
