--- a/resources/webinterface/dashboard/localization/dashboard_hungarian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_hungarian.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Hangtükrözés némításának feloldása",
   "HeadsetVolume": "Fejszett hangerő",
   "AudioMirrorVolume": "Hangtükrözés hangerő",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Mikrofon némítása",
+  "UnmuteMicrophone": "Mikrofon némításának feloldása",
   "SteamVR_Home": "SteamVR Otthon",
   "Exit_SteamVR_Home": "Kilépés a SteamVR Otthonból",
   "Exit_Game": "Kilépés a játékból",
@@ -46,8 +46,8 @@
   "Size": "Méret",
   "Mute": "Némítás",
   "Unmute": "Némítás feloldása",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Fejszett némítása",
+  "Unmute_Headset": "Fejszett némításának feloldása",
   "WelcomeHeader": "Nincsenek játékok?",
   "WelcomeMessage": "Olyan VR könyvtárat építeni, amely követi hardvered változását, még soha nem volt ilyen könnyű.",
   "WelcomeBrowseStore": "Böngészés az Áruházban",
