--- a/resources/webinterface/dashboard/localization/dashboard_italian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_italian.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Attiva audio duplicato",
   "HeadsetVolume": "Volume del visore",
   "AudioMirrorVolume": "Volume audio duplicato",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Disattiva microfono",
+  "UnmuteMicrophone": "Attiva microfono",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "Esci da SteamVR Home",
   "Exit_Game": "Esci dal gioco",
@@ -46,8 +46,8 @@
   "Size": "Dimensioni",
   "Mute": "Silenzia",
   "Unmute": "Attiva voce",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Audio visore: no",
+  "Unmute_Headset": "Audio visore: sì",
   "WelcomeHeader": "Nessun gioco?",
   "WelcomeMessage": "Costruire una libreria VR che ti segue anche quando cambi hardware non è mai stato così facile.",
   "WelcomeBrowseStore": "Sfoglia il Negozio",
