--- a/resources/webinterface/dashboard/localization/dashboard_polish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_polish.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Wyłącz wyciszenie duplikowanego dźwięku",
   "HeadsetVolume": "Głośność gogli",
   "AudioMirrorVolume": "Głośność duplikowanego dźwięku",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Wycisz mikrofon",
+  "UnmuteMicrophone": "Wyłącz wyciszenie mikrofonu",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "Wyjdź ze SteamVR Home",
   "Exit_Game": "Wyjdź z gry",
@@ -46,8 +46,8 @@
   "Size": "Rozmiar",
   "Mute": "Wycisz",
   "Unmute": "Wył. wyciszenie",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Wycisz gogle",
+  "Unmute_Headset": "Wyłącz wyciszenie gogli",
   "WelcomeHeader": "Brak gier?",
   "WelcomeMessage": "Tworzenie biblioteki VR, która jest razem z tobą wraz ze zmianą twojego sprzętu, jeszcze nigdy nie było łatwiejsze.",
   "WelcomeBrowseStore": "Przeglądaj sklep",
