--- a/resources/webinterface/dashboard/localization/dashboard_russian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_russian.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Включить дублирование звука",
   "HeadsetVolume": "Громкость в шлеме",
   "AudioMirrorVolume": "Громкость дублируемого звука",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Заглушить микрофон",
+  "UnmuteMicrophone": "Включить микрофон",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "Exit SteamVR Home",
   "Exit_Game": "Exit Game",
@@ -46,8 +46,8 @@
   "Size": "Size",
   "Mute": "Mute",
   "Unmute": "Unmute",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Заглушить шлем",
+  "Unmute_Headset": "Включить звук шлема",
   "WelcomeHeader": "No Games?",
   "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
   "WelcomeBrowseStore": "Browse the Store",
