--- a/resources/webinterface/dashboard/localization/dashboard_schinese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_schinese.json
@@ -1,56 +1,56 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
-  "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "UI_Unknown": "未知",
+  "Now_Starting": "下一个",
+  "Now_Starting_HomeApp": "返回主页",
+  "Now_Playing": "正在进行",
+  "Now_Playing_HomeApp": "主页",
+  "Now_Quitting": "正在退出",
+  "Now_Waiting": "等待中…",
+  "BackToApp": "返回应用",
+  "Toggle_Room_View": "切换房间视角",
+  "GoHome": "返回主页",
+  "QuitApp": "退出应用",
+  "DashboardPower_Header": "系统",
+  "BindingCallout_Header": "显示控制",
   "MutedLabel": "被禁言",
   "MuteAudioMirror": "将音频镜像静音",
   "UnmuteAudioMirror": "取消音频镜像静音",
   "HeadsetVolume": "头戴式显示器音量",
   "AudioMirrorVolume": "音频镜像音量",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
-  "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
-  "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "HideKeyboardTooltip": "Hide Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
-  "WelcomeHeader": "No Games?",
-  "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games",
-  "Play": "Play"
+  "MuteMicrophone": "静音麦克风",
+  "UnmuteMicrophone": "取消麦克风静音",
+  "SteamVR_Home": "SteamVR 家",
+  "Exit_SteamVR_Home": "退出 SteamVR 家",
+  "Exit_Game": "退出游戏",
+  "Menu": "菜单",
+  "Desktops": "桌面",
+  "Volume": "音量",
+  "X_More_Overlays": "%1$s 个额外界面",
+  "Store": "商店",
+  "BrowseAllGames": "浏览所有游戏",
+  "BrowseAll": "浏览所有",
+  "StoreSection_TopSingleplayer": "热销单人游戏",
+  "StoreSection_TopMultiplayer": "热销多人游戏",
+  "StoreSection_TopFree": "热销免费游戏",
+  "Library": "库",
+  "RecentlyPlayed": "最近玩过的",
+  "Return_To_Game": "返回游戏",
+  "Return_To_Home": "返回主页",
+  "Controller_Bindings": "控制器按键设置",
+  "App_Video_Settings": "视频设置",
+  "Desktop": "桌面",
+  "Desktop_X": "桌面 %1$s",
+  "ShowKeyboardLabel": "键盘",
+  "ShowKeyboardTooltip": "显示键盘",
+  "HideKeyboardTooltip": "隐藏键盘",
+  "Size": "大小",
+  "Mute": "静音",
+  "Unmute": "取消静音",
+  "Mute_Headset": "头戴式显示器静音",
+  "Unmute_Headset": "取消头戴式显示器静音",
+  "WelcomeHeader": "没有游戏？",
+  "WelcomeMessage": "创建一个随您硬件改变的 VR 库从未如此简单。",
+  "WelcomeBrowseStore": "浏览商店",
+  "WelcomeInstall": "安装游戏",
+  "Play": "运行"
 }
