--- a/resources/webinterface/dashboard/localization/dashboard_thai.json
+++ b/resources/webinterface/dashboard/localization/dashboard_thai.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "เลิกปิดเสียงเสมือน",
   "HeadsetVolume": "ระดับเสียงเครื่องสวมศีรษะ",
   "AudioMirrorVolume": "ระดับเสียงเสมือน",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "ปิดเสียงไมโครโฟน",
+  "UnmuteMicrophone": "เลิกปิดเสียงไมโครโฟน",
   "SteamVR_Home": "หน้าหลัก SteamVR",
   "Exit_SteamVR_Home": "ออกจากหน้าหลัก SteamVR",
   "Exit_Game": "ออกจากเกม",
@@ -46,8 +46,8 @@
   "Size": "ขนาด",
   "Mute": "ปิดเสียง",
   "Unmute": "เลิกปิดเสียง",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "ปิดเสียงเครื่องสวมศีรษะ",
+  "Unmute_Headset": "เลิกปิดเสียงเครื่องสวมศีรษะ",
   "WelcomeHeader": "ไม่มีเกม?",
   "WelcomeMessage": "การสร้างคลัง VR ที่มาพร้อมกับการเปลี่ยนแปลงฮาร์ดแวร์ของคุณที่ไม่เคยง่ายดายขนาดนี้มาก่อน",
   "WelcomeBrowseStore": "เปิดหาร้านค้า",
