--- a/resources/webinterface/dashboard/localization/dashboard_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/dashboard_ukrainian.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Увімкнути дублювання звуку",
   "HeadsetVolume": "Гучність шолома",
   "AudioMirrorVolume": "Гучність дублювання звуку",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Заглушити мікрофон",
+  "UnmuteMicrophone": "Усунути приглушення",
   "SteamVR_Home": "Домівка SteamVR",
   "Exit_SteamVR_Home": "Вийти з домівки SteamVR",
   "Exit_Game": "Вийти з гри",
@@ -46,8 +46,8 @@
   "Size": "Розмір",
   "Mute": "Приглушити",
   "Unmute": "Усунути приглушення",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Приглушити шолом",
+  "Unmute_Headset": "Усунути приглушення",
   "WelcomeHeader": "Немає ігор?",
   "WelcomeMessage": "Створення ВР-бібліотеки, яка лишається з вами попри зміни обладнання, ще ніколи не було таким легким.",
   "WelcomeBrowseStore": "Оглянути крамницю",
