--- a/resources/webinterface/dashboard/localization/dashboard_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_vietnamese.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Mở lặp lại âm thanh",
   "HeadsetVolume": "Âm lượng mũ chụp",
   "AudioMirrorVolume": "Âm lượng âm thanh lặp lại",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Tắt micro",
+  "UnmuteMicrophone": "Bật micro",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "Thoát trang chủ SteamVR",
   "Exit_Game": "Thoát trò chơi",
@@ -46,8 +46,8 @@
   "Size": "Kích cỡ",
   "Mute": "Tắt tiếng",
   "Unmute": "Mở tiếng",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Tắt âm mũ chụp",
+  "Unmute_Headset": "Bật âm mũ chụp",
   "WelcomeHeader": "Không có trò nào?",
   "WelcomeMessage": "Chưa bao giờ dễ dàng hơn để tạo một thư viện thực tế ảo có thể bắt kịp xu thế thay đổi phần cứng của bạn.",
   "WelcomeBrowseStore": "Duyệt xem cửa hàng",
