--- a/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_brazilian.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Pausar RV quando o headset não estiver em uso",
 	"Settings_PauseOnLocked": "Pausar RV quando o computador estiver bloqueado",
 	"Settings_OverlayRenderQuality": "Overlay Render Quality",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "High",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Low",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Cômodo médio",
