--- a/resources/webinterface/dashboard/localization/vrmonitor_czech.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_czech.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manuálně",
 	"Settings_Audio_Mirroring_Label": "Zrcadlení zvuku",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Oddělené ovládání hlasitosti zrcadleného zvuku (beta)",
 	"Settings_Audio_Default": "Dle systému",
 	"Settings_Audio_Current_Setting_Unknown": "(vybrané zařízení nebylo nalezeno)",
 	"Settings_Audio_HDMIGain": "Zmenšení dynamického rozsahu signálu HTC VIVE – HDMI audio",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Pozastavení VR při nečinnosti",
 	"Settings_PauseOnLocked": "Pozastavení VR při uzamčení PC",
 	"Settings_OverlayRenderQuality": "Kvalita renderování překrytí",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Vysoká",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Nízká",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animace",
 	"Settings_MediumSpace": "Střední prostor",
 	"Settings_NightModeCheck": "Noční režim",
 	"Settings_NightModeDesc": "Ztmaví headset do 5.00 ráno (nebo do restartování režimu SteamVR).",
