--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Keskeytä VR, kun VR-lasit ovat toimettomina",
 	"Settings_PauseOnLocked": "Keskeytä VR, kun tietokone on lukittu",
 	"Settings_OverlayRenderQuality": "Näytön renderöintilaatu",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Korkea",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Matala",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Keskikokoinen tila",
