--- a/resources/webinterface/dashboard/localization/vrmonitor_french.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_french.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Mettre en pause la VR lorsque le casque est inactif",
 	"Settings_PauseOnLocked": "Mettre en pause la VR lorsque l'ordinateur est verrouillé",
 	"Settings_OverlayRenderQuality": "Qualité du rendu de l'overlay",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Élevé(e)",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Faible",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Espace moyen",
