--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "VR-Headset",
 	"Settings_Audio_Manual": "Manuell",
 	"Settings_Audio_Mirroring_Label": "Audiospiegelung",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Spiegelungslautstärke separat einstellen (Beta)",
 	"Settings_Audio_Default": "Systemstandard",
 	"Settings_Audio_Current_Setting_Unknown": "(Aktuell ausgewähltes Gerät nicht gefunden)",
 	"Settings_Audio_HDMIGain": "Verstärkungsreduzierung für VIVE HDMI-Audio",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "VR pausieren, während das VR-Headset inaktiv ist",
 	"Settings_PauseOnLocked": "VR pausieren, während der Computer gesperrt ist",
 	"Settings_OverlayRenderQuality": "Overlay-Renderqualität",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Hoch",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Niedrig",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animationen",
 	"Settings_MediumSpace": "Mittelgroßer Raum",
 	"Settings_NightModeCheck": "Nachtmodus",
 	"Settings_NightModeDesc": "Das VR-Headset im Nachtmodus bis 5 Uhr abdunkeln (oder bis SteamVR neu gestartet wird).",
