--- a/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_hungarian.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Fejszett",
 	"Settings_Audio_Manual": "Kézi",
 	"Settings_Audio_Mirroring_Label": "Hangtükrözés",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Tükrözési hangerő külön vezérlése (béta)",
 	"Settings_Audio_Default": "Rendszer-alapértelmezett",
 	"Settings_Audio_Current_Setting_Unknown": "(A jelenleg kiválasztott eszköz nincs jelen)",
 	"Settings_Audio_HDMIGain": "Erősítéscsökkentés a VIVE HDMI hangon",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "VR felfüggesztése, amikor a fejszett tétlen",
 	"Settings_PauseOnLocked": "VR felfüggesztése, amikor a számítógép zárolva van",
 	"Settings_OverlayRenderQuality": "Átfedés megjelenítési minősége",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Magas",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Alacsony",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animációk",
 	"Settings_MediumSpace": "Közepes tér",
 	"Settings_NightModeCheck": "Éjszakai mód",
 	"Settings_NightModeDesc": "Reggel öt óráig (vagy a SteamVR újraindításáig) leveszi a fejszett fényerejét.",
