--- a/resources/webinterface/dashboard/localization/vrmonitor_italian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_italian.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Visore",
 	"Settings_Audio_Manual": "Manuale",
 	"Settings_Audio_Mirroring_Label": "Duplicazione dell'audio",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Controlla il mirroring del volume separatamente (beta)",
 	"Settings_Audio_Default": "Impostazione predefinita",
 	"Settings_Audio_Current_Setting_Unknown": "(Il dispositivo selezionato non è presente)",
 	"Settings_Audio_HDMIGain": "Riduzione del guadagno sull'audio HDMI VIVE",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Sospendi VR mentre il visore è inattivo",
 	"Settings_PauseOnLocked": "Sospendi VR mentre il computer è bloccato",
 	"Settings_OverlayRenderQuality": "Qualità di rendering dell'Overlay",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Alta",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Bassa",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animazioni",
 	"Settings_MediumSpace": "Spazio medio",
 	"Settings_NightModeCheck": "Modalità notturna",
 	"Settings_NightModeDesc": "Riduci la luminosità del visore fino alle 5 del mattino (oppure fino al riavvio di SteamVR).",
