--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_OverlayRenderQuality": "오버레이 렌더링 품질",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "높음",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "낮음",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "중간 크기 공간",
