--- a/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_norwegian.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Sett VR på pause når hodesettet er uvirksomt",
 	"Settings_PauseOnLocked": "Sett VR på pause når datamaskinen er låst",
 	"Settings_OverlayRenderQuality": "Gjengivelseskvalitet på overlegg",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Høy",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Lav",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Middels område",
