--- a/resources/webinterface/dashboard/localization/vrmonitor_polish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_polish.json
@@ -50,8 +50,8 @@
 	"Settings_Audio_Recording_Automatic_Label": "Urządzenie wejściowe audio",
 	"Settings_Audio_Headset": "Gogle",
 	"Settings_Audio_Manual": "Ręczne",
-	"Settings_Audio_Mirroring_Label": "Duplikacja audio",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Label": "Duplikacja dźwięku",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Kontroluj głośność duplikatu oddzielnie (beta)",
 	"Settings_Audio_Default": "Domyślne systemowe",
 	"Settings_Audio_Current_Setting_Unknown": "(obecnie wybrane urządzenie nie jest obecne)",
 	"Settings_Audio_HDMIGain": "Redukcja wzmocnienia sygnału wyjściowego VIVE HDMI Audio",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Wstrzymaj VR, gdy gogle są w stanie bezczynności",
 	"Settings_PauseOnLocked": "Wstrzymaj VR, gdy komputer jest zablokowany",
 	"Settings_OverlayRenderQuality": "Jakość renderowania nakładki",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Wysoka",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Niska",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animacje",
 	"Settings_MediumSpace": "Średnia przestrzeń",
 	"Settings_NightModeCheck": "Tryb nocny",
 	"Settings_NightModeDesc": "Przyciemnij gogle do 5:00 (lub do chwili restartu SteamVR).",
