--- a/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_portuguese.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Pausar R.V. se headset estiver inativo",
 	"Settings_PauseOnLocked": "Pausar R.V. enquanto o computer estiver bloqueado",
 	"Settings_OverlayRenderQuality": "Qualidade de renderização de interfaces",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Alta",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Baixa",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Espaço médio",
