--- a/resources/webinterface/dashboard/localization/vrmonitor_russian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_russian.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Отражение звука",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Управление дублируемым звуком отдельно (бета)",
 	"Settings_Audio_Default": "System Default",
 	"Settings_Audio_Current_Setting_Unknown": "(выбранное в данный момент устройство отсутствует)",
 	"Settings_Audio_HDMIGain": "Функция снижения усиления на аудио-интерфейсе HDMI VIVE",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_OverlayRenderQuality": "Качество рендеринга оверлея",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Высокое",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Низкое",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Анимации",
 	"Settings_MediumSpace": "Среднее пространство",
 	"Settings_NightModeCheck": "Ночной режим",
 	"Settings_NightModeDesc": "Снизить яркость подсветки гарнитуры до 5:00 утра (или до перезапуска SteamVR).",
