--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -13,9 +13,9 @@
 	"Settings_Controller_CustomBinding": "自定义",
 	"Settings_ThumbstickDeadzone_Text": "摇杆死区",
 	"Settings_ThumbstickDeadzone_Desc": "调整所有摇杆的死区",
-	"Settings_DominantHand": "Dominant Hand",
-	"Settings_DominantHand_Left": "Left",
-	"Settings_DominantHand_Right": "Right",
+	"Settings_DominantHand": "惯用手",
+	"Settings_DominantHand_Left": "左",
+	"Settings_DominantHand_Right": "右",
 	"Settings_Loading_CurrentBinding": "正在载入当前按键设置…",
 	"Settings_NeedSteamTo_ViewAndEditBindings": "启动 Steam 以查看并编辑按键设置。",
 	"VRMonitor_Overview_SystemStatus_Title": "系统状态",
@@ -51,13 +51,13 @@
 	"Settings_Audio_Headset": "头戴式显示器",
 	"Settings_Audio_Manual": "手动",
 	"Settings_Audio_Mirroring_Label": "音频镜像",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
-	"Settings_Audio_Default": "System Default",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "分别控制镜像量（测试）",
+	"Settings_Audio_Default": "系统默认值",
 	"Settings_Audio_Current_Setting_Unknown": "（当前选择的设备不存在）",
 	"Settings_Audio_HDMIGain": "VIVE HDMI 音频的增益衰减",
 	"Settings_SectionTitle_Advanced": "高级",
 	"Settings_SectionTitle_Developer": "开发者",
-	"Settings_SectionTitle_Dashboard": "Dashboard",
+	"Settings_SectionTitle_Dashboard": "主面板",
 	"Settings_SectionTitle_General": "通用",
 	"Settings_SectionTitle_Applications": "应用程序",
 	"Settings_SectionTitle_Audio": "音频",
@@ -93,16 +93,16 @@
 	"Settings_Advanced_Paths_Header": "路径",
 	"Settings_Advanced_Reset_Header": "重置",
 	"Settings_Advanced_Status_Header": "状态检测",
-	"Settings_ShowSettingsInDashboard": "Show Settings Tab",
-	"Settings_ShowPowerMenu": "Show Power Options",
-	"Settings_AllowAppQuitting": "Allow App Quitting From Dashboard",
-	"Settings_ShowDesktopViews": "Show Desktop Tabs",
+	"Settings_ShowSettingsInDashboard": "显示设置选项卡",
+	"Settings_ShowPowerMenu": "显示电源选项",
+	"Settings_AllowAppQuitting": "允许应用退出主面板",
+	"Settings_ShowDesktopViews": "显示桌面选项卡",
 	"Settings_CheckForSteam": "检查 Steam",
 	"Settings_DebugInputBindings": "在输入按键设置用户界面启动调试选项",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "从界面启用全局输入（实验）",
 	"Settings_FadeToGrid": "应用挂起时淡出至网格",
-	"Settings_EnableDashboard": "VR Dashboard on System Button",
-	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
+	"Settings_EnableDashboard": "按下系统键时显示 VR 主面板",
+	"Settings_EnableDashboardDesc": "允许唤出 VR 主面板以响应按下系统键的操作。",
 	"Settings_HomeAppCheck": "SteamVR 家",
 	"Settings_HomeAppDesc": "享受虚拟环境、社交功能，以及更多精彩。",
 	"Settings_LargeSpace": "大型空间",
@@ -110,10 +110,13 @@
 	"Settings_LockedModeDesc": "电脑被锁定时允许渲染至头戴式显示器。",
 	"Settings_PauseOnStandby": "头戴式显示器闲置时暂停 VR",
 	"Settings_PauseOnLocked": "电脑锁定时暂停 VR",
-	"Settings_OverlayRenderQuality": "Overlay Render Quality",
-	"Settings_High": "High",
-	"Settings_Low": "Low",
-	"Settings_Animations": "Animations",
+	"Settings_OverlayRenderQuality": "界面渲染品质",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
+	"Settings_High": "高",
+	"Settings_Medium": "Medium",
+	"Settings_Low": "低",
+	"Settings_Animations": "动画",
 	"Settings_MediumSpace": "中型空间",
 	"Settings_NightModeCheck": "夜间模式",
 	"Settings_NightModeDesc": "使头戴式显示器变暗直至凌晨 5 点（或直至 SteamVR 重启）。",
@@ -178,7 +181,7 @@
 	"Settings_PerApplication_Reprojection_Header": "再投影",
 	"Settings_PerApplication_Reprojection_Checkbox": "使用旧版再投影模式",
 	"Settings_PerApplication_Reprojection_Description": "勾选此选项将禁用此产品的异步再投影。",
-	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Refresh Rate Override",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "刷新率替代",
 	"Settings_Perapplication_RefreshRateOverride_Description": "勾选此选项将允许为此应用程序指定不同于全局设置的刷新率。",
 	"Settings_MimeTypes_Pancake_Header": "选择一个要在其中启动 2D 应用程序的应用程序",
 	"Settings_Camera_EnableCamera": "启动摄像头",
@@ -217,7 +220,7 @@
 	"Settings_General_Cancel": "取消",
 	"Settings_General_Confirm": "确认",
 	"Settings_General_Close": "关闭",
-	"Settings_General_CalibrateThumbstick": "Calibrate Thumbstick",
+	"Settings_General_CalibrateThumbstick": "校准摇杆",
 	"Settings_General_CalibrateThumbstick_ConnectAController": "将控制器与摇杆连接。",
 	"Settings_General_NotEnoughSamples": "请至少再按压摇杆 %1$s 下以完成校准。",
 	"Settings_General_InviteMoreSamples": "计算出的角度为 %1$s°。保持按压以调整该值，或按下“确认”以接受此校准。",
@@ -228,13 +231,13 @@
 	"Settings_Dashboard_ShowProgressIndicator": "长按进度指示器",
 	"Settings_Dashboard_Position": "主面板位置",
 	"Settings_Classic": "经典",
-	"Settings_Near": "Near",
-	"Settings_Middle": "Middle",
+	"Settings_Near": "靠近",
+	"Settings_Middle": "中间",
 	"Settings_DesktopScale": "桌面比例",
 	"Settings_DashboardScale": "主面板比例",
-	"Settings_DesktopDarkMode": "Desktop Dark Mode",
-	"Settings_ToggleDarkMode": "Toggle Dark Mode",
-	"Settings_Dark": "Dark",
+	"Settings_DesktopDarkMode": "桌面黑暗模式",
+	"Settings_ToggleDarkMode": "切换黑暗模式",
+	"Settings_Dark": "黑暗",
 	"SettingsTime_5s": "5 秒",
 	"SettingsTime_30s": "30 秒",
 	"SettingsTime_1m": "1 分钟",
@@ -269,7 +272,7 @@
 	"CameraTest_CameraFailed": "摄像头通信失败",
 	"CameraTest_TrackingFailed": "摄像头启用时定位失败",
 	"CameraTest_Success": "通过摄像头测试",
-	"CameraTest": "Camera Test",
+	"CameraTest": "摄像头测试",
 	"CameraTestStatus_Evaluating": "正在检查",
 	"CameraTestStatus_Success": "成功",
 	"CameraTestStatus_Failure": "失败",
@@ -280,8 +283,8 @@
 	"CameraRoomViewMode_VideoOpaque": "不透明穿透",
 	"Settings_MustRestart_Description": "必须重启 SteamVR 以使部分变更生效。",
 	"Settings_MustRestart_RestartSteamVR_Button": "重启 SteamVR",
-	"Settings_MustQuitApp_Description": "Please quit the current game for changes to take effect.",
-	"Settings_MustQuitApp_QuitCurrentGame_Button": "Quit Game",
+	"Settings_MustQuitApp_Description": "请退出当前游戏以使更改生效。",
+	"Settings_MustQuitApp_QuitCurrentGame_Button": "退出游戏",
 	"Settings_NotSupported": "不支持",
 	"Settings_AdvancedSettings": "高级设置",
 	"Settings_Show": "显示",
