--- a/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_spanish.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Visor",
 	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Duplicación de audio",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control separado del duplicado de audio (beta)",
 	"Settings_Audio_Default": "Predeterminado del sistema",
 	"Settings_Audio_Current_Setting_Unknown": "(El dispositivo seleccionado actualmente no está presente)",
 	"Settings_Audio_HDMIGain": "Reducción de ganancia en el audio HDMI de VIVE",
@@ -102,7 +102,7 @@
 	"Advanced_GlobalActionSetPriority": "Habilitar entrada global de superposiciones (experimental)",
 	"Settings_FadeToGrid": "Mostrar la cuadrícula cuando se cuelga la aplicación",
 	"Settings_EnableDashboard": "Menú principal de RV en el botón del sistema",
-	"Settings_EnableDashboardDesc": "Permite que se llame al menú principal de RV en respuesta a una presión del botón del sistema.",
+	"Settings_EnableDashboardDesc": "Permite que se llame al menú principal de RV tras presionar el botón del sistema.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Disfruta de entornos virtuales, funciones sociales y más.",
 	"Settings_LargeSpace": "Espacio amplio",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Detener la RV cuando el visor esté inactivo",
 	"Settings_PauseOnLocked": "Detener la RV cuando el ordenador esté bloqueado",
 	"Settings_OverlayRenderQuality": "Calidad de renderizado de la interfaz",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Alta",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Baja",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animaciones",
 	"Settings_MediumSpace": "Espacio mediano",
 	"Settings_NightModeCheck": "Modo nocturno",
 	"Settings_NightModeDesc": "Atenuar el brillo del visor hasta las 5:00 a. m. (o hasta que se reinicie SteamVR).",
