--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "頭戴顯示器閒置時暫停 VR",
 	"Settings_PauseOnLocked": "電腦鎖定時暫停 VR",
 	"Settings_OverlayRenderQuality": "Overlay Render Quality",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "High",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Low",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "中型空间",
