--- a/resources/webinterface/dashboard/localization/vrmonitor_thai.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_thai.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "เครื่องสวมศีรษะ",
 	"Settings_Audio_Manual": "ดำเนินการเอง",
 	"Settings_Audio_Mirroring_Label": "การส่งเสียงเสมือน",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "ควบคุมระดับเสียงเสมือนแยกต่างหาก (เบต้า)",
 	"Settings_Audio_Default": "ค่าเริ่มต้นระบบ",
 	"Settings_Audio_Current_Setting_Unknown": "(อุปกรณ์ที่เลือกไว้ไม่พร้อมใช้งานในขณะนี้)",
 	"Settings_Audio_HDMIGain": "การลดทอนค่า Gain บนสัญญาณเสียง HDMI ของ Vive",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "หยุด VR เมื่อเครื่องสวมศีรษะนิ่งเฉย",
 	"Settings_PauseOnLocked": "หยุด VR เมื่อคอมพิวเตอร์ถูกล็อค",
 	"Settings_OverlayRenderQuality": "คุณภาพการเรนเดอร์โอเวอร์เลย์",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "สูง",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "ต่ำ",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "แอนิเมชัน",
 	"Settings_MediumSpace": "พื้นที่ขนาดปานกลาง",
 	"Settings_NightModeCheck": "โหมดกลางคืน",
 	"Settings_NightModeDesc": "ลดแสงในเครื่องสวมศีรษะจนถึง 05:00 น. (หรือจนรีสตาร์ท SteamVR)",
