--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_OverlayRenderQuality": "Arayüzü İşleme Kalitesi",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Yüksek",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Düşük",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Orta Büyüklükteki Alan",
