--- a/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_ukrainian.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Шолом",
 	"Settings_Audio_Manual": "Вручну",
 	"Settings_Audio_Mirroring_Label": "Дублювання звуку",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Окреме керування гучністю дублювання звуку (бета)",
 	"Settings_Audio_Default": "Стандарт системи",
 	"Settings_Audio_Current_Setting_Unknown": "(наразі вибраний пристрій відсутній)",
 	"Settings_Audio_HDMIGain": "Зниження посилення в аудіоінтерфейсі HDMI VIVE",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Призупиняти ВР, коли шолом бездіяльний",
 	"Settings_PauseOnLocked": "Призупиняти ВР, коли комп’ютер заблоковано",
 	"Settings_OverlayRenderQuality": "Якість рендерингу оверлею",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Висока",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Низька",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Анімації",
 	"Settings_MediumSpace": "Середній простір",
 	"Settings_NightModeCheck": "Нічний режим",
 	"Settings_NightModeDesc": "Затемнює шолом до 5:00 (або до перезапуску SteamVR).",
