--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Mũ chụp",
 	"Settings_Audio_Manual": "Thủ công",
 	"Settings_Audio_Mirroring_Label": "Lặp lại âm thanh",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Điều khiển âm lượng âm thanh lặp riêng biệt (beta)",
 	"Settings_Audio_Default": "Mặc định cho hệ thống",
 	"Settings_Audio_Current_Setting_Unknown": "(Thiết bị được chọn hiện tại không có)",
 	"Settings_Audio_HDMIGain": "Giảm khuếch đại trên VIVE HDMI Audio",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "Ngừng VR khi mũ chụp ở trạng thái nhàn rỗi (idle)",
 	"Settings_PauseOnLocked": "Tạm dừng VR khi máy tính bị khóa",
 	"Settings_OverlayRenderQuality": "Chất lượng dựng lớp phủ",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Cao",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Thấp",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Chuyển động",
 	"Settings_MediumSpace": "Không gian vừa",
 	"Settings_NightModeCheck": "Chế độ ban đêm",
 	"Settings_NightModeDesc": "Giảm độ sáng mũ chụp đến 5 giờ sáng (hoặc đến khi khởi động lại SteamVR).",
