--- a/resources/webinterface/dashboard/localization/webhelper_schinese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_schinese.json
@@ -68,6 +68,6 @@
 	"OriginString_Source": "%3$s",
 	"OriginString_Controller": "%2$s",
 	"KeyboardDone": "确定",
-	"Resetting_Seated_Origin": "Resetting Seated Origin",
+	"Resetting_Seated_Origin": "正在重置就座原点",
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
