--- a/resources/webinterface/dashboard/localization/bindingui_danish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_danish.json
@@ -299,7 +299,7 @@
   "BindingUI_BindingType_developer_legacy": "Ældre standarder",
   "BindingUI_BindingType_local_file": "Lokal binding",
   "BindingUI_BindingType_public": "Offentlig binding",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Aktuel binding",
   "BindingUI_List_DeveloperSection": "Officielle bindinger",
   "BindingUI_List_LegacySection": "Standardbindinger",
@@ -402,7 +402,7 @@
   "InputDebugger_ActiveOrigin": "Oprindelse:",
   "InputDebugger_UpdateTime": "Sidst opdateret:",
   "InputDebugger_Value": "Værdi:",
-  "InputDebugger_ActionUnbound": "Action is unbound",
+  "InputDebugger_ActionUnbound": "Handlingen er ikke tilknyttet",
   "InputDebugger_Parameters": "Parametre:",
   "InputDebugger_Inputs": "Input:",
   "InputDebugger_Outputs": "Output:",
