--- a/resources/webinterface/dashboard/localization/bindingui_italian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_italian.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "Modifica di %1$s",
   "BindingUI_ViewPageTitle": "Visualizzazione di %1$s",
   "BindingUI_PageSubTitle": "%3$s per %1$s in %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s per %1$s (%4$s) in %2$s",
   "BindingUI_BindingType_autosave": "Modifiche locali",
   "BindingUI_BindingType_personal": "Configurazione personale",
   "BindingUI_BindingType_developer": "Configurazione per sviluppatori",
   "BindingUI_BindingType_developer_legacy": "Impostazioni predefinite originarie",
   "BindingUI_BindingType_local_file": "Configurazione locale",
   "BindingUI_BindingType_public": "Configurazione pubblica",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Configurazione attuale",
   "BindingUI_List_DeveloperSection": "Configurazioni ufficiali",
   "BindingUI_List_LegacySection": "Configurazioni predefinite",
