--- a/resources/webinterface/dashboard/localization/bindingui_portuguese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_portuguese.json
@@ -299,7 +299,7 @@
   "BindingUI_BindingType_developer_legacy": "Predefinições clássicas",
   "BindingUI_BindingType_local_file": "Config. local",
   "BindingUI_BindingType_public": "Config. pública",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Configuração atual",
   "BindingUI_List_DeveloperSection": "Config. oficiais",
   "BindingUI_List_LegacySection": "Config. predefinidas",
