--- a/resources/webinterface/dashboard/localization/bindingui_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_ukrainian.json
@@ -292,14 +292,14 @@
   "BindingUI_EditPageTitle": "Редагування %1$s",
   "BindingUI_ViewPageTitle": "Перегляд %1$s",
   "BindingUI_PageSubTitle": "%3$s для %1$s у %2$s",
-  "BindingUI_PageSubTitle_WithVariant": "%3$s For %1$s (%4$s) in %2$s",
+  "BindingUI_PageSubTitle_WithVariant": "%3$s для %1$s (%4$s) у %2$s",
   "BindingUI_BindingType_autosave": "Локальні зміни",
   "BindingUI_BindingType_personal": "Особиста розкладка",
   "BindingUI_BindingType_developer": "Розкладка розробника",
   "BindingUI_BindingType_developer_legacy": "Класичний стандарт",
   "BindingUI_BindingType_local_file": "Локальна розкладка",
   "BindingUI_BindingType_public": "Загальнодоступна розкладка",
-  "BindingVariant_onehanded": "One Handed",
+  "BindingVariant_singlecontroller": "Single Controller",
   "BindingUI_List_CurrentSection": "Поточна розкладка",
   "BindingUI_List_DeveloperSection": "Офіційні розкладки",
   "BindingUI_List_LegacySection": "Стандартні розкладки",
