--- a/resources/webinterface/dashboard/localization/dashboard_spanish.json
+++ b/resources/webinterface/dashboard/localization/dashboard_spanish.json
@@ -17,8 +17,8 @@
   "UnmuteAudioMirror": "Dejar de silenciar duplicado de audio",
   "HeadsetVolume": "Volumen del visor",
   "AudioMirrorVolume": "Volumen de duplicación de audio",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
+  "MuteMicrophone": "Silenciar el micrófono",
+  "UnmuteMicrophone": "Dejar de silenciar el micrófono",
   "SteamVR_Home": "SteamVR Home",
   "Exit_SteamVR_Home": "Salir de SteamVR Home",
   "Exit_Game": "Salir del juego",
@@ -46,8 +46,8 @@
   "Size": "Dimensiones",
   "Mute": "Sil",
   "Unmute": "Dejar de silenciar",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
+  "Mute_Headset": "Silenciar el visor",
+  "Unmute_Headset": "Dejar de silenciar el visor",
   "WelcomeHeader": "¿Sin juegos?",
   "WelcomeMessage": "Nunca ha sido más fácil crear una biblioteca de realidad virtual que te acompañe incluso si tu hardware cambia.",
   "WelcomeBrowseStore": "Explorar la tienda",
