--- a/resources/webinterface/dashboard/localization/dashboard_tchinese.json
+++ b/resources/webinterface/dashboard/localization/dashboard_tchinese.json
@@ -1,56 +1,56 @@
 {
-  "UI_Unknown": "Unknown",
-  "Now_Starting": "Next Up",
+  "UI_Unknown": "不明",
+  "Now_Starting": "下一個",
   "Now_Starting_HomeApp": "Going Home To",
-  "Now_Playing": "Now Playing",
-  "Now_Playing_HomeApp": "Home",
-  "Now_Quitting": "Now Exiting",
-  "Now_Waiting": "Waiting...",
-  "BackToApp": "Back to App",
-  "Toggle_Room_View": "Toggle Room View",
-  "GoHome": "Go Home",
-  "QuitApp": "Quit App",
-  "DashboardPower_Header": "System",
-  "BindingCallout_Header": "Show Controls",
+  "Now_Playing": "執行中",
+  "Now_Playing_HomeApp": "首頁",
+  "Now_Quitting": "正在結束",
+  "Now_Waiting": "等待中…",
+  "BackToApp": "返回應用程式",
+  "Toggle_Room_View": "切換房間視角",
+  "GoHome": "前往首頁",
+  "QuitApp": "離開應用程式",
+  "DashboardPower_Header": "系統",
+  "BindingCallout_Header": "顯示控制選項",
   "MutedLabel": "已靜音",
   "MuteAudioMirror": "Mute Audio Mirror",
   "UnmuteAudioMirror": "Unmute Audio Mirror",
-  "HeadsetVolume": "Headset Volume",
-  "AudioMirrorVolume": "Audio Mirror Volume",
-  "MuteMicrophone": "Mute Microphone",
-  "UnmuteMicrophone": "Unmute Microphone",
-  "SteamVR_Home": "SteamVR Home",
-  "Exit_SteamVR_Home": "Exit SteamVR Home",
-  "Exit_Game": "Exit Game",
-  "Menu": "Menu",
-  "Desktops": "Desktops",
-  "Volume": "Volume",
-  "X_More_Overlays": "%1$s More Overlays",
-  "Store": "Store",
-  "BrowseAllGames": "Browse All Games",
-  "BrowseAll": "Browse All",
-  "StoreSection_TopSingleplayer": "Top Singleplayer",
-  "StoreSection_TopMultiplayer": "Top Multiplayer",
-  "StoreSection_TopFree": "Top Free",
-  "Library": "Library",
-  "RecentlyPlayed": "Recently Played",
-  "Return_To_Game": "Return to Game",
-  "Return_To_Home": "Return to Home",
-  "Controller_Bindings": "Controller Bindings",
-  "App_Video_Settings": "Video Settings",
-  "Desktop": "Desktop",
+  "HeadsetVolume": "頭戴顯示器音量",
+  "AudioMirrorVolume": "音訊鏡像輸出音量",
+  "MuteMicrophone": "靜音麥克風",
+  "UnmuteMicrophone": "解除靜音麥克風",
+  "SteamVR_Home": "SteamVR 家",
+  "Exit_SteamVR_Home": "結束 SteamVR 家",
+  "Exit_Game": "結束遊戲",
+  "Menu": "選單",
+  "Desktops": "桌面",
+  "Volume": "音量",
+  "X_More_Overlays": "%1$s 個額外內崁介面",
+  "Store": "商店",
+  "BrowseAllGames": "瀏覽所有遊戲",
+  "BrowseAll": "瀏覽全部",
+  "StoreSection_TopSingleplayer": "暢銷單人遊戲",
+  "StoreSection_TopMultiplayer": "暢銷多人遊戲",
+  "StoreSection_TopFree": "暢銷免費遊戲",
+  "Library": "收藏庫",
+  "RecentlyPlayed": "近期遊玩",
+  "Return_To_Game": "返回遊戲",
+  "Return_To_Home": "返回首頁",
+  "Controller_Bindings": "控制器按鍵配置",
+  "App_Video_Settings": "視訊設定",
+  "Desktop": "桌面",
   "Desktop_X": "Desktop %1$s",
-  "ShowKeyboardLabel": "Keyboard",
-  "ShowKeyboardTooltip": "Show Keyboard",
-  "HideKeyboardTooltip": "Hide Keyboard",
-  "Size": "Size",
-  "Mute": "Mute",
-  "Unmute": "Unmute",
-  "Mute_Headset": "Mute Headset",
-  "Unmute_Headset": "Unmute Headset",
-  "WelcomeHeader": "No Games?",
+  "ShowKeyboardLabel": "鍵盤",
+  "ShowKeyboardTooltip": "顯示鍵盤",
+  "HideKeyboardTooltip": "隱藏鍵盤",
+  "Size": "大小",
+  "Mute": "靜音",
+  "Unmute": "解除靜音",
+  "Mute_Headset": "靜音頭戴顯示器",
+  "Unmute_Headset": "解除靜音麥克風",
+  "WelcomeHeader": "沒有遊戲？",
   "WelcomeMessage": "Building a VR library that comes with you as your hardware changes has never been easier.",
-  "WelcomeBrowseStore": "Browse the Store",
-  "WelcomeInstall": "Install Games",
-  "Play": "Play"
+  "WelcomeBrowseStore": "瀏覽商店",
+  "WelcomeInstall": "安裝遊戲",
+  "Play": "開始遊戲"
 }
