--- a/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_dutch.json
@@ -51,7 +51,7 @@
 	"Settings_Audio_Headset": "Headset",
 	"Settings_Audio_Manual": "Handmatig",
 	"Settings_Audio_Mirroring_Label": "Audiospiegeling",
-	"Settings_Audio_Mirroring_Independent_Volume_Label": "Control mirror volume separately (Beta)",
+	"Settings_Audio_Mirroring_Independent_Volume_Label": "Spiegelingsvolume los instellen (bèta)",
 	"Settings_Audio_Default": "Systeemstandaard",
 	"Settings_Audio_Current_Setting_Unknown": "(Momenteel geselecteerde apparaat is niet gevonden)",
 	"Settings_Audio_HDMIGain": "Versterkingsvermindering voor VIVE HDMI-audio",
@@ -99,7 +99,7 @@
 	"Settings_ShowDesktopViews": "Bureaubladtabbladen weergeven",
 	"Settings_CheckForSteam": "Op Steam controleren",
 	"Settings_DebugInputBindings": "Debugopties in de gebruikersinterface voor invoerconfiguratie",
-	"Advanced_GlobalActionSetPriority": "Enable global input from overlays (Experimental)",
+	"Advanced_GlobalActionSetPriority": "Globale invoer van overlays inschakelen (experimenteel)",
 	"Settings_FadeToGrid": "Naar raster vervagen als de app hangt",
 	"Settings_EnableDashboard": "VR-dashboard op systeemknop",
 	"Settings_EnableDashboardDesc": "Hiermee wordt het VR-dashboard na een druk op de systeemknop geopend.",
@@ -111,9 +111,12 @@
 	"Settings_PauseOnStandby": "VR pauzeren als de headset inactief is",
 	"Settings_PauseOnLocked": "VR pauzeren als de computer vergrendeld is",
 	"Settings_OverlayRenderQuality": "Weergavekwaliteit overlay",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "Hoog",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Laag",
-	"Settings_Animations": "Animations",
+	"Settings_Animations": "Animaties",
 	"Settings_MediumSpace": "Middelgrote ruimte",
 	"Settings_NightModeCheck": "Nachtmodus",
 	"Settings_NightModeDesc": "Dimt de headset tot 05:00 (of tot SteamVR wordt herstart).",
@@ -269,7 +272,7 @@
 	"CameraTest_CameraFailed": "Cameracommunicatie mislukt",
 	"CameraTest_TrackingFailed": "Volgen met geactiveerde camera mislukt",
 	"CameraTest_Success": "Cameratest geslaagd",
-	"CameraTest": "Camera Test",
+	"CameraTest": "Cameratest",
 	"CameraTestStatus_Evaluating": "Controleren",
 	"CameraTestStatus_Success": "Succesvol",
 	"CameraTestStatus_Failure": "Mislukt",
