--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "ヘッドセットがアイドル状態の時にVRを一時停止する",
 	"Settings_PauseOnLocked": "コンピューターのロック時にVRを一時停止する",
 	"Settings_OverlayRenderQuality": "Overlay Render Quality",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "High",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Low",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "中くらいのスペース",
