--- a/resources/webinterface/dashboard/localization/vrmonitor_latam.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_latam.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Detener la RV cuando el visor esté inactivo",
 	"Settings_PauseOnLocked": "Detener la RV cuando el equipo esté bloqueado",
 	"Settings_OverlayRenderQuality": "Overlay Render Quality",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "High",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Low",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Espacio mediano",
