--- a/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_romanian.json
@@ -111,7 +111,10 @@
 	"Settings_PauseOnStandby": "Pause VR when headset is idle",
 	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_OverlayRenderQuality": "Overlay Render Quality",
+	"Settings_Auto_Parenthesized": "Auto (%1$s)",
+	"Settings_Auto": "Auto",
 	"Settings_High": "High",
+	"Settings_Medium": "Medium",
 	"Settings_Low": "Low",
 	"Settings_Animations": "Animations",
 	"Settings_MediumSpace": "Spațiu mediu",
